<resources>
    <string name="app_name">SeeWeather</string>
    <string name="default_city">Kaliningrad</string>
    <string name="submit_button_text">Submit</string>
    <string name="temperature">Temperature: </string>
    <string name="wind_direction">Wind direction: </string>
    <string name="wind_power">Wind power: </string>
    <string name="last_update">Last update: </string>
    <string name="time_of_day">Time of day: </string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="current_location">Current Location</string>
    <string name="details">Details</string>
    <string name="forecast">Forecast</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="wind_power_title">Wind power</string>
    <string name="wind_direction_title">Wind direction</string>
    <string name="wind_pressure_title">Pressure</string>
    <string name="wind_humidity_title">Humidity</string>

    <string name="measure_units_category">Units of measure</string>
    <string name="speed_mph_title">miles per hour</string>
    <string name="speed_kph">kilometre per hour</string>
    <string name="settings_distance_meter">metres</string>
    <string name="settings_distance_kilometer">kilometres</string>
    <string name="settings_distance_miles">miles</string>
    <string name="temp_f">Fahrenheit</string>
    <string name="temp_c">Celsius</string>
    <string name="pref_speed">Speed</string>
    <string name="pref_distance">Distance</string>
    <string name="pref_temp">Temperature</string>
    <string name="city_search_hint">Enter the name of city</string>
    <string name="select_city_button">S</string>
    <string name="default_bottom_tab_text">Погода</string>
    <string name="location_bottom_tab_text">Локации</string>
    <string name="preference_bottom_tab_text">Настройки</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="feels_like">Feels like</string>
    <string name="precipitation">Precipitation</string>
    <string name="cloud_cover">Cloud cover</string>
    <string name="wind">Wind</string>
    <string name="uv_index">UV index</string>
    <string name="visibility">Visibility</string>
    <string name="wind_gust">Wind gust</string>
    <string name="speed_msec">m/s</string>
    <string name="speed_kmh">km/h</string>
    <string name="speed_mph">mph</string>
    <string name="distance_miles">mi</string>
    <string name="distance_km">km</string>
    <string name="distance_meter">m</string>
</resources>