<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/feels_like"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toStartOf="@+id/precipitation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/feels_like"
            android:src="@drawable/ic_mild" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/feels_like" />

        <TextView
            android:id="@+id/feels_like_text"
            style="@style/currentWeatherItemValue"
            tools:text="35CC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/precipitation"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toStartOf="@+id/cloud_cover"
        app:layout_constraintStart_toEndOf="@+id/feels_like"
        app:layout_constraintTop_toTopOf="@+id/feels_like">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/precipitation"
            android:src="@drawable/ic_w_drops" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/precipitation" />

        <TextView
            android:id="@+id/precipitation_text"
            style="@style/currentWeatherItemValue"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cloud_cover"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/precipitation"
        app:layout_constraintTop_toTopOf="@+id/precipitation">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/cloud_cover"
            android:src="@drawable/ic_w_cloud"
            app:tint="?attr/colorAccent" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/cloud_cover" />

        <TextView
            android:id="@+id/cloud_cover_text"
            style="@style/currentWeatherItemValue"
            tools:text="100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wind"
        style="@style/currentWeatherItemContainer"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feels_like">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/wind"
            android:src="@drawable/ic_w_hazzy"
            app:tint="?attr/colorAccent" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/wind_text"
            style="@style/currentWeatherItemValue"
            tools:text="9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressure"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toStartOf="@+id/humidity"
        app:layout_constraintStart_toEndOf="@+id/wind"
        app:layout_constraintTop_toTopOf="@+id/wind">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/precipitation"
            android:src="@drawable/ic_pressure" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/pressure_text"
            style="@style/currentWeatherItemValue"
            tools:text="1012" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidity"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toTopOf="@+id/pressure">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/cloud_cover"
            android:src="@drawable/ic_humidity"
            app:tint="?attr/colorAccent" />

        <TextView

            style="@style/currentWeatherItemCaption"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/humidity_text"
            style="@style/currentWeatherItemValue"
            tools:text="54" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/uv_index"
        style="@style/currentWeatherItemContainer"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/precipitation"
            android:src="@drawable/ic_w_sunny"
            app:tint="?attr/colorAccent" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/uv_index" />

        <TextView
            android:id="@+id/uv_index_text"
            style="@style/currentWeatherItemValue"
            tools:text="7/11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/visibility"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toStartOf="@+id/wind_gust"
        app:layout_constraintStart_toEndOf="@+id/uv_index"
        app:layout_constraintTop_toTopOf="@+id/uv_index">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/cloud_cover"
            android:src="@drawable/ic_w_horizont"
            app:tint="?attr/colorAccent" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/visibility" />

        <TextView
            android:id="@+id/visibility_text"
            style="@style/currentWeatherItemValue"
            tools:text="54" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wind_gust"
        style="@style/currentWeatherItemContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/visibility"
        app:layout_constraintTop_toTopOf="@+id/visibility">

        <ImageView
            style="@style/currentWeatherItemImage"
            android:contentDescription="@string/wind_gust"
            android:src="@drawable/ic_w_wind"
            app:tint="?attr/colorAccent" />

        <TextView
            style="@style/currentWeatherItemCaption"
            android:text="@string/wind_gust" />

        <TextView
            android:id="@+id/wind_gust_text"
            style="@style/currentWeatherItemValue"
            tools:text="25" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>