<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/selected_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Kaliningrad" />

        <TextView
            android:id="@+id/location_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/current_location"
            android:textColor="#616161"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/selected_city"
            app:layout_constraintTop_toBottomOf="@+id/selected_city" />

        <ImageView
            android:id="@+id/action_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="@+id/selected_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/selected_city" />

        <ImageView
            android:id="@+id/action_map"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@null"
            android:src="@drawable/baseline_map_24"
            app:layout_constraintBottom_toBottomOf="@+id/selected_city"
            app:layout_constraintEnd_toStartOf="@+id/action_city_list"
            app:layout_constraintTop_toTopOf="@+id/selected_city" />

        <ImageView
            android:id="@+id/action_city_list"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@null"
            android:src="@drawable/baseline_list_24"
            app:layout_constraintBottom_toBottomOf="@+id/selected_city"
            app:layout_constraintEnd_toStartOf="@+id/action_settings"
            app:layout_constraintTop_toTopOf="@+id/selected_city" />


        <ImageView
            android:id="@+id/action_refresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@null"
            android:src="@drawable/baseline_refresh_24"
            app:layout_constraintBottom_toBottomOf="@+id/selected_city"
            app:layout_constraintEnd_toStartOf="@+id/action_map"
            app:layout_constraintTop_toTopOf="@+id/selected_city" />

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#616161"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_caption"
            tools:text="Friday, 25 December 2020" />

        <TextView
            android:id="@+id/current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="96sp"
            app:layout_constraintEnd_toStartOf="@+id/current_temp_unit"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_date"
            tools:text="22" />

        <TextView
            android:id="@+id/current_temp_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/current_temp"
            app:layout_constraintBottom_toBottomOf="@+id/current_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/current_temp"
            tools:text="C" />

        <TextView
            android:id="@+id/temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="#616161"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/baseline_arrow_downward_24"
            app:layout_constraintEnd_toStartOf="@+id/temp_max"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_temp"
            tools:text="16c" />

        <TextView
            android:id="@+id/temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="#616161"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/baseline_arrow_upward_24"
            app:layout_constraintBottom_toBottomOf="@+id/temp_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/temp_min"
            app:layout_constraintTop_toBottomOf="@+id/current_temp"
            app:layout_constraintTop_toTopOf="@+id/temp_min"
            tools:text="23c" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/weather_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_min"
            tools:src="@drawable/baseline_cloud_24" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="#616161"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_image"
            tools:text="Light Drizzle" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="#616161"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_sunset"
            app:layout_constraintEnd_toStartOf="@+id/sunrise"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_description"
            tools:text="05:30" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="#616161"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_sunrise"
            app:layout_constraintBottom_toBottomOf="@+id/sunset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sunset"
            app:layout_constraintTop_toTopOf="@+id/sunset"
            tools:text="18:45" />

        <TextView
            android:id="@+id/forecast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forecast"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sunrise" />

        <TextView
            android:id="@+id/forecast_hourly_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/hourly_forecast"
            android:textColor="#616161"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecast_title" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hours_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/forecast_daily_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecast_hourly_title"
            tools:layout_height="65dp"
            tools:listitem="@layout/hour_view_holder" />

        <TextView
            android:id="@+id/forecast_daily_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/daily_forecast"
            android:textColor="#616161"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hours_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/days_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecast_daily_title"
            tools:layout_height="90dp"
            tools:listitem="@layout/day_view_holder" />

        <TextView
            android:id="@+id/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/details"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/days_list" />

        <TextView
            android:id="@+id/wind_power_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wind_power_title"
            android:textColor="#616161"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_title" />

        <TextView
            android:id="@+id/wind_power_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind_power_title"
            tools:text="11 km/h" />

        <TextView
            android:id="@+id/wind_direction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wind_direction_title"
            android:textColor="#616161"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind_power_value" />

        <TextView
            android:id="@+id/wind_direction_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind_direction_title"
            tools:text="west" />

        <TextView
            android:id="@+id/pressure_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wind_pressure_title"
            android:textColor="#616161"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind_direction_value" />

        <TextView
            android:id="@+id/pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure_title"
            tools:text="11%" />

        <TextView
            android:id="@+id/humidity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wind_humidity_title"
            android:textColor="#616161"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure_value" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity_title"
            tools:text="11%" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>